--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -34,7 +34,7 @@ import { Icon } from "astro-icon/components";
           {
             Config.socials.map((link) => (
               <li>
-                <a href={link.url}>
+                <a href={link.url} target="_blank">
                   <span class="sr-only">{link.name}</span>
                   <Icon name={link.icon} size={25} />
                 </a>
